--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Digital Forensics\Lab12\11-carve-fat
 Digital Forensics\Lab12\12-carve-ext2
 Digital Forensics\Lab12\11-carve-fat.zip
 Digital Forensics\Lab12\12-carve-ext2.zip
+Digital Forensics/Lab15/cridex.vmem
