--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Digital Forensics\Lab12\12-carve-ext2
 Digital Forensics\Lab12\11-carve-fat.zip
 Digital Forensics\Lab12\12-carve-ext2.zip
 Digital Forensics/Lab15/cridex.vmem
+Digital Forensics/FAT/L1_Video.dd.bz2
+Digital Forensics/FAT/L3_Documents.dd.bz2
